bluec-tests/tests/valid/types_pointer/compare_pointer_to_int.c
int main(void)
{
    long *l = 0;
    // Like clang/gcc, we allow this and emit a warning.
    return l <= 100ul;
}