bluec-tests/tests/invalid/types_longdouble/invalid_type_specifier_2.c
int main(void) {
    /* "long long double" is not a valid type specifier */
    long long double f = 10.0L;
    return 0;
}